transit/src/main/resources/com/pixelduke/transit/base.css
/* ... */
.combo-box-base:focused {
    -fx-border-color: border_color border_color border_bottom_color border_color, focus_ring_border_color;
    -fx-border-width: 1, 1;

    -fx-border-style: solid, solid;
    -fx-border-radius: 4px, 4px;
    -fx-border-insets: 0, -3;
}

.combo-box-base:armed,
.combo-box-base:focused:armed,
.combo-box-base:showing,
.combo-box-base:showing:hover,
.combo-box-base:editable:showing {
    -fx-border-color: border_color;
    -fx-background-color: background_armed_color;
}

/* ------- OPEN BUTTON ------- */
/*.combo-box-base > .arrow-button {
    -fx-background-color: transparent, transparent, transparent;
}

/* Add more space to the inside right part of a ComboBox so that more text fits inside */
/*.combo-box-base.combo-box > .arrow-button {
    -fx-padding: 0.5em 0.667em 0.5em 0em; /* 6 8 6 0 */
/*}

/* ------- ARROW ------- */
/*.combo-box-base > .arrow-button > .arrow {
    -fx-background-insets: 0 0 0 0, 0;
}

/*============================  ListView (Popup)  ============================*/
.combo-box-popup > .list-view {
    -fx-effect: dropshadow(gaussian , rgba(0,0,0,0.1) , 12, 0.0 , 4 , 4 );

    -fx-background-color: listview_background_color;
    -fx-background-radius: 6px;

    -fx-border-color: listview_border_color;
    -fx-border-radius: 6px;
    -fx-border-width: 1px;

    -fx-background-insets: 0, 1;

    -fx-padding: 0.333333em;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell {
    -fx-font-family: "Segoe UI";
    -fx-font-size: 1em;
    -fx-padding: 0.333333em 0 0.333333em 0.416667em; /* 4 0 4 5 */

    -fx-background-radius: 3px;
    -fx-background-color: transparent;

    -fx-text-fill: text_default_color;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:hover{
    -fx-background-color: cell_hover_color;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:armed{
    -fx-background-color: cell_armed_color;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected{
    -fx-background-color: cell_selected_color;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected:hover {
    -fx-background-color: cell_selected_hover_color;
}

.combo-box-popup > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected:armed {
    -fx-background-color: cell_selected_armed_color;
}

/*==========================  Editable ComboBox  =============================*/

/*.combo-box-base.combo-box:editable > .text-input {
    -fx-skin: "javafx.scene.control.skin.TextFieldSkin"
}

.combo-box-base.combo-box:editable > .text-input {
    -fx-background-color: transparent, transparent;
}

/*===== Arrow Button =====*/
/*.combo-box-base.combo-box:editable > .arrow-button {
    -fx-background-insets: 0 0 0 -8;
    -fx-background-radius: 0;
}
.combo-box-base.combo-box:editable > .arrow-button:hover {
    -fx-background-color: combo_box_editable_button_hover_color;
}

/*====== Focused =======*/
/*.combo-box-base.combo-box:editable:focused {
    -fx-background-color: transparent, accent_color, transparent, combo_box_editable_focused_background_color;
}

/* - Arrow Button */
/*.combo-box-base.combo-box:editable:focused > .arrow-button > .arrow {
    -fx-background-color: combo_box_editable_focused_arrow_color;
}

.combo-box-base.combo-box:editable:focused > .arrow-button:hover {
    -fx-background-color: combo_box_editable_focused_button_hover_color;
}

/*******************************************************************************
 *                                                                             *
 * Text Common (TextField, PasswordField, TextArea)                            *
 *                                                                             *
 ******************************************************************************/

.text-input {
    -fx-border-color: border_color border_color border_bottom_color border_color;
    -fx-border-width: 1px 1px 2px 1px;
    -fx-border-radius: 4px;

    -fx-background-radius: 4px;
    -fx-background-color: background_color;

    -fx-font-family: "Segoe UI";
    -fx-text-fill: text_default_color;

    -fx-prompt-text-fill: prompt_text_color;

    -fx-highlight-fill: highlight_color;
    -fx-highlight-text-fill: highlighted_text_color;

    -fx-cursor: text;
    -fx-padding: 0.333333em 0.583em 0.333333em 0.583em; /* 4 7 4 7 */
}

.text-input.text-field > Pane,
.text-input.password-field > Pane {
    -fx-background-color: transparent;
}

/* hover */
.text-input:hover {
    -fx-background-color: background_hover_color;
}

/* focused */
.text-input:focused,
.text-input:hover:focused {
    -fx-background-color: background_focused_color;

    -fx-border-color: border_color border_color accent_color border_color, focus_ring_border_color;
    -fx-border-width: 1px 1px 2px 1px, 1px;
    -fx-border-style: solid, solid;
    -fx-border-radius: 4px, 4px;
    -fx-border-insets: 0, -3;

    -fx-text-fill: text_focused_color;
}

/* right button */
.text-input > .right-button {
    -fx-background-insets: 0.25em 0.25em 0.333333em 0.25em;
}
/* ... */

